k8s/ingress/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pricedrop-api-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:<YOUR-AWS-REGION>:<AWS_ACCOUNT_ID>:certificate/<CERTIFICATE_ID>
spec:
  rules:
    - host: api.pricedrop24.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pricedrop-api
                port:
                  number: 80
